force-app/main/default/objects/Availability__c/Availability__c.object-meta.xml
<CustomObject>
    <label>Availability</label>
    <nameField>
        <label>Availability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availabilitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>