force-app/main/default/objects/Availability__c/fields/Slot_ID__c.field-meta.xml
<CustomField>
    <fullName>Slot_ID__c</fullName>
    <label>Slot ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>