force-app/main/default/objects/Availability__c/fields/Slot_Type__c.field-meta.xml
<CustomField>
    <fullName>Slot_Type__c</fullName>
    <label>Slot Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>