force-app/main/default/objects/Availability__c/fields/Start_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Text__c</fullName>
    <formula>TEXT(DATEVALUE(Start_Time__c)) &amp; &quot; &quot; &amp; 
RIGHT(&quot;0&quot; &amp; TEXT(VALUE(MID(TEXT(Start_Time__c), 12, 2))), 2) &amp; &quot;:&quot; &amp; 
RIGHT(&quot;0&quot; &amp; TEXT(VALUE(MID(TEXT(Start_Time__c), 15, 2))), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time Text</label>
    <type>Text</type>
</CustomField>